Normalize line endings

--- a/teacher_rating/teachers/templates/base.html
+++ b/teacher_rating/teachers/templates/base.html
@@ -6,6 +6,8 @@
     <title>{% block title %}Информационная система рейтинга{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/teacher_detail.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <header>
@@ -18,18 +20,11 @@
                 <a href="{% url 'login' %}">Войти</a> |
                 <a href="{% url 'register' %}">Регистрация</a>
             {% endif %}
-            {% if user.is_staff %}
-                <a href="/admin/">Админ-панель</a>
-            {% endif %}
         </nav>
     </header>
     <main>
         {% block content %}
-        <!-- Уникальный контент страниц -->
         {% endblock %}
     </main>
-    <footer>
-        <p>&copy; {{ "now" | date:"Y" }} Информационная система рейтинга преподавателей</p>
-    </footer>
 </body>
 </html>
