--- a/teacher_rating/teachers/templates/registration/login.html
+++ b/teacher_rating/teachers/templates/registration/login.html
@@ -5,7 +5,16 @@
     <h2>Вход в систему</h2>
     {% if form.errors %}
     <div class="alert alert-error">
-        Неправильное имя пользователя или пароль.
+        <ul>
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
     </div>
     {% endif %}
     
@@ -21,9 +30,5 @@
         </div>
         <button type="submit" class="btn">Войти</button>
     </form>
-    
-    <p style="text-align: center; margin-top: 1rem;">
-        Нет аккаунта? <a href="{% url 'register' %}" style="color: var(--primary-color);">Зарегистрируйтесь</a>
-    </p>
 </div>
 {% endblock %}
