--- a/teacher_rating/teachers/templates/registration/register.html
+++ b/teacher_rating/teachers/templates/registration/register.html
@@ -16,6 +16,14 @@
     <form method="post">
         {% csrf_token %}
         <div class="form-group">
+            <label for="id_first_name">Имя:</label>
+            {{ form.first_name }}
+        </div>
+        <div class="form-group">
+            <label for="id_last_name">Фамилия:</label>
+            {{ form.last_name }}
+        </div>
+        <div class="form-group">
             <label for="id_username">Имя пользователя:</label>
             {{ form.username }}
         </div>
